@@ -16,6 +16,7 @@ Changes since PyInstaller 1.3
    PyOpenGL).
  + Fix support for PIL when imported without top-level package ("import 
    Image").
+ + Fix PyXML import hook under NT (thanks to Lorenzo Mancini)
 
 
 PyInstaller 1.3
